# pricing-optimization-system

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.py
.github/workflows/: cd.yml  ci.yml
data/: README.md
docs/api/: api_documentation.md
docs/guides/: contributing.md  installation.md  usage_guide.md
docs/images/: README.md
notebooks/exploration/: 01_data_exploration.ipynb
requirements/: base.txt  dev.txt
scripts/: batch_prediction.py  check_environment.py  data_download.py  model_diagnostics.py  model_training.py  setup_environment.ps1
src/: __init__.py
src/api/: __init__.py  main.py
src/api/routes/: forecasts.py  pricing.py  products.py
src/api/schemas/: request.py  response.py
src/config/: api_config.py  model_config.py
src/data_ingestion/: __init__.py  data_cleaner.py  data_loader.py  data_validator.py  feature_engineer.py
src/exploratory_analysis/: __init__.py  eda_notebook.py  statistical_analysis.py  visualizations.py
src/models/: __init__.py
src/models/demand_forecasting/: __init__.py  arima_model.py  ensemble_model.py  lstm_model.py  prophet_model.py  xgboost_model.py
src/models/price_elasticity/: __init__.py  elasticity_analyzer.py  elasticity_estimator.py  segment_elasticity.py
src/models/price_optimization/: __init__.py  dynamic_pricer.py  optimizer.py  revenue_calculator.py
src/utils/: config.py  helpers.py  logger.py  metrics.py
tests/fixtures/: sample_data.py
tests/integration/: test_pipeline.py
tests/unit/: test_data_loader.py  test_models.py  test_optimizer.py
