[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pricing-optimization-system"
version = "0.1.0"
description = "Modular retail pricing optimization system."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
